<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Servitek</string>
    <string name="Nombre">Nombre:</string>
    <string name="Cedula">Cedula:</string>
    <string name="codigo">CODIGO</string>
    <string name="servicio">SERVICIO</string>
    <string name="cantidad">Cantidad</string>
    <string name="Can">CANTIDAD</string>
    <string name="unidad">UNIDAD</string> 
    <string name="precio">PRECIO</string>
    <string name="todo">TODO</string>
    <string name="total">TOTAL</string>
    <string name="Carrito">Acceso a registro de vehiculo</string>
    <string name="_0">0</string>
    <string name="iva">IVA</string>
    <string name="guardar">Guardar</string>
    <string name="menu">Menu</string>
    <string name="buscar_placa">Buscar placa</string>
    <string name="placa">Placa</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="celular">Celular</string>
    <string name="email">Email</string>
    <string name="modelo">Modelo</string>
    <string name="fotovehiculo">Fotovehiculo</string>
    <string name="editar">Editar</string>
    <string name="color">Color</string>
    <string name="borrar_pantalla">Borrar pantalla</string> 
    <string name="logo_app">Logo de la app</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>
    <string name="logo">logo</string>
    <string name="registrar_vehiculo">Registrar vehiculo</string>
    <string name="orden_de_compra">Orden de compra</string>
    <string name="salir">Salir</string>
    <string name="modificar">EDITAR</string> 
    <string name="estado">E</string>
    <string name="syncro">S</string>
    <string name="ver">VER</string>
    <string name="detalles_de_compra">Detalles de compra</string>
    <string name="nuevo">Nuevo</string>
    <string name="No">N°</string>
    <string name="sing_in">Sign In</string>
    <string name="remenber_me">Remenber me</string>
    <string name="pla">PLACA</string>
    <string name="valor">VALOR</string>

</resources>
