<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E1D84F"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <AutoCompleteTextView 
            android:id="@+id/Autocom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/placa"
            android:maxLength="9"
            android:textSize="60sp"
            android:textStyle="bold"
            android:completionThreshold="1"/>

            <ImageButton
                android:id="@+id/limpiar"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/buscar_placa"
                android:src="@drawable/abc_ic_ab_back_holo_light" />
        </RelativeLayout>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/edittext_select"
            android:focusable="false"
            android:hint="@string/Nombre"
            android:inputType="number" />

        <EditText
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/edittext_select"
            android:focusable="false"
            android:hint="@string/Cedula"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Spinner
                android:id="@+id/tecnicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_select" />

            <Spinner
                android:id="@+id/servi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_select" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/Cantidad"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/edittext_select"
                android:hint="@string/cantidad"
                android:inputType="number" />

            <TextView
                android:id="@+id/Precio"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/_0" />

            <ImageButton
                android:id="@+id/agregar"
                android:layout_width="45dp"
                android:layout_height="37dp"
                android:layout_marginLeft="40dp"
                android:contentDescription="@string/Carrito"
                android:src="@drawable/com" />
        </LinearLayout>
    </LinearLayout>

    <TableRow
        android:id="@+id/cabecera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="7" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabla_celda_cabecera"
            android:gravity="center"
            android:text="@string/codigo"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabla_celda_cabecera"
            android:gravity="center"
            android:text="@string/servicio"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabla_celda_cabecera"
            android:gravity="center"
            android:text="@string/cantidad"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabla_celda_cabecera"
            android:gravity="center"
            android:text="@string/unidad"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabla_celda_cabecera"
            android:gravity="center"
            android:text="@string/precio"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabla_celda_cabecera"
            android:gravity="center"
            android:text="@string/iva"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabla_celda_cabecera"
            android:gravity="center"
            android:text="@string/total"
            android:textSize="15sp" />
    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp" >

        <TableLayout
            android:id="@+id/tabladetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="7" >
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/fotoscarro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/foto"
            android:layout_width="200sp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:background="#E1D84F"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu" />
    </LinearLayout>

</LinearLayout>