<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E1D84F" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            
            <AutoCompleteTextView 
            android:id="@+id/Autocom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/edittext_select"
            android:hint="@string/placa"
            android:maxLength="9"
            android:textSize="60sp"
            android:textStyle="bold"
            android:completionThreshold="1"/>
            
            <ImageButton 
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/abc_ic_ab_back_holo_light"
                android:background="@android:color/transparent"
                android:id="@+id/borrar" 
                android:contentDescription="@string/borrar_pantalla"/> 
        </RelativeLayout>

            <EditText
                android:id="@+id/cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/edittext_select"
                android:hint="@string/cedula"
                android:inputType="number" 
                android:singleLine="true"/>

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/edittext_select"
                android:hint="@string/nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/dir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/edittext_select"
                android:hint="@string/direccion"
                android:inputType="text" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/edittext_select"
                android:hint="@string/celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/edittext_select"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/edittext_select"
                android:hint="@string/modelo"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:layout_marginTop="7dp">

                <Button
                    android:id="@+id/btcolor"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content" 
                    android:text="@string/color"/>

                <TextView
                    android:id="@+id/carcolor"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="#fff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/marcas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_select"/>

            <Spinner
                android:id="@+id/tipos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_select" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/foto"
                android:layout_width="250sp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:background="#E1D84F"
                android:contentDescription="@string/fotovehiculo"
                android:src="@drawable/ic_launcherg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guardar" />
            
            <Button
                android:id="@+id/editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editar" />

            <Button
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>